<?php

namespace phpDocumentor\Api;

interface Element
{
    public function getFqsen();
    public function getName();
}
