<?php

namespace phpDocumentor\Api\Php\Elements;

use phpDocumentor\Api\Php\Traits;

final class ClassConstant extends BaseElement
{
    use Traits\IsDocumented;
}
