<?php

namespace phpDocumentor\Api\Php\Elements;

use phpDocumentor\Api\Php\Traits;

final class Constant extends BaseElement
{
    use Traits\IsDocumented;
}
