<?php

namespace phpDocumentor\Api\Php\Elements;

use phpDocumentor\Api\Php\Traits;

final class Function_ extends BaseElement
{
    use Traits\IsDocumented;
}
