<?php

namespace phpDocumentor;

interface DocumentGroup
{

}
